# rickbot

./: .env  .gitattributes  .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  setup-env.sh
.gemini/: settings.json
deploy/: cloudbuild.yaml
src/rickbot/: .dockerignore  Dockerfile  agent.py  app.py  chat.py  config.py  create_auth_secrets.py  personality.py  requirements.txt  utils.py
src/rickbot/.streamlit/: config.toml
src/rickbot/data/: personalities.yaml
src/rickbot/data/system_prompts/: yasmin.txt
src/rickbot/system_prompts/: daz.txt  dazbo.txt  donald.txt
src/secure_prompts/: README.md  dazbo.txt
